--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     
   </head>
   <body>
-    <script>
-      console.log("Hello World!")
+    <script src="script.js">
+       getComputerChoice()
     </script>
   </body>
 </html>
